fix banner on mobile

--- a/app/design/frontend/Kemana/planetgadget/Magento_Theme/web/css/source/module/_home-banner.less
+++ b/app/design/frontend/Kemana/planetgadget/Magento_Theme/web/css/source/module/_home-banner.less
@@ -22,19 +22,24 @@
 //  Mobile
 //  _____________________________________________
 
-.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+.media-width(@extremum, @break)
+    when
+    (@extremum = "max")
+    and
+    (@break = @screen__m) {
     .pg-club-banner-desktop {
         display: none;
     }
 
     .pg-club-banner-mobile {
-        height: 60px;
+        height: 30px;
         .lib-vendor-prefix-display();
         justify-content: center;
         background: @kemana-secondary-brand-color;
 
         img {
-            height: 60px;
+            height: 30px;
+            object-fit: cover;
             width: auto;
             margin-inline: auto;
         }
@@ -45,7 +50,11 @@
 //  Desktop
 //  _____________________________________________
 
-.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
+.media-width(@extremum, @break)
+    when
+    (@extremum = "min")
+    and
+    (@break = @screen__m) {
     .pg-club-banner-desktop {
         height: 60px;
         .lib-vendor-prefix-display();
